# TWB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  ConfigReadme.md  Pipfile  README.md  config.example.json  config.json  installer.bat  main.py  manager.py  monkeytype.sqlite3  pyproject.toml  requirements.txt  start.bat  tox.ini  twb.py
.github/: dependabot.yml
.github/workflows/: publish.yaml  test.yaml
core/: driver.py  exceptions.py  extractors.py  filemanager.py  notification.py  reporter.py  request.py  templates.py  time.py  twplus.py  twstats.py  updater.py
docs/: ConfigReadme.md
game/: attack.py  buildingmanager.py  defence_manager.py  gameoptions.py  hunter.py  map.py  reports.py  resources.py  simulator.py  snobber.py  troopmanager.py  village.py
pages/: overview.py
readme/: configs.md  readme.md
requirements/: base.in  base.txt  build.txt  dev.in  dev.txt  tests.txt  typing.in  typing.txt
templates/builder/: purple_predator.txt  purple_predator_into_off.txt
templates/offensive/: scout.txt
templates/troops/: basic.txt  basic_into_def.txt  basic_into_off.txt  defensive_1.txt  offensive.txt
tests/: test_bot.py
twb/: bot.py  manager.py
twb/cache/: session.json
twb/core/: config.py  exceptions.py  extractors.py  filemanager.py  notification.py  reporter.py  request.py  templates.py  twstats.py  updater.py  utils.py
twb/game/: attack.py  buildingmanager.py  defence_manager.py  hunter.py  map.py  reports.py  resources.py  simulator.py  snobber.py  troopmanager.py  village.py
twb/pages/: overview.py
twb/templates/: config.example.json
twb/webmanager/: helpfile.py  server.py  utils.py
webmanager/: helpfile.py  server.py  utils.py
webmanager/api/: filemanager.py  server.py
webmanager/templates/: bot.html  config.html  main.html  map.html  templates.html  village.html  (+1 more)
(+24 files in other folders)
